--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
   "content_scripts": [
   {
     "matches": ["<all_urls>"],
-    "css": ["fix.css"],
-    "js": ["jquery-3.4.1.min.js","content.js"]
+    "css": ["fix.css"]
   }
 ]
 }
